# UniteDefi

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DEMO_SCENARIOS.md  DEPLOYMENT_INFO.md  FAQ.md  HACKATHON_COMPLIANCE.md  IMPLEMENTATION_FIX_PLAN.md  ISSUES.md  JUDGES_QUICKSTART.md  Makefile  ONCHAIN_DEMO_GUIDE.md  README.md  REAL_TRANSACTION_PROOF.md  RELEASES.md  RELEASE_GUIDE.md  SUBMISSION_CHECKLIST.md  TRANSACTION_VERIFICATION.md  TROUBLESHOOTING.md  demo-real-working-swap.sh  demo-standalone.sh  demo_verification.sh  load-env.sh  package.json  pitch_deck.md  pitch_deck_script.md  pnpm-lock.yaml  test-real-tx.sh  test-release-build.sh
.claude/agents/: hackathon-presentation-specialist.md  qa-security-engineer.md  web3-bridge-architect.md  web3-hackathon-strategist.md  web3-tdd-engineer.md
.claude/commands/: demo-setup.md  dev-tools.md  swap-eth-to-near.md  swap-near-to-eth.md
.github/ISSUE_TEMPLATE/: security-improvements.md
.github/workflows/: ci-optimized-backup.yml  ci.yml  claude-code-review.yml  claude.yml  contracts-ci.yml  release.yml
.kiro/specs/fusion-gateway/: requirements.md  spec.json
.kiro/specs/real-eth-near-swap/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
contracts/ethereum/: .env.example  .solhint.json  Escrow.sol  EscrowFactory.sol  IEscrow.sol  IEscrowFactory.sol  Makefile  README.md  README_LIMITORDER.md  deploy.js  foundry.toml  hackathon_compliance_verification.json  hardhat.config.js  package.json  slither-report.json  slither-report.sarif  slither.config.json
contracts/ethereum/deployments/: base-sepolia-escrow.json  base-sepolia-limitorder.json  fusion1inch-adapter-deployment.json
contracts/ethereum/script/: DeployEscrowFactory.s.sol  DeployFusion1inchAdapter.s.sol  DeployLimitOrderProtocol.s.sol
contracts/ethereum/scripts/: deploy-base-sepolia.sh
contracts/ethereum/src/: Escrow.sol  EscrowFactory.sol  Fusion1inchAdapter.sol  Fusion1inchNearAdapter.sol  IEscrow.sol  IEscrowFactory.sol
contracts/ethereum/test/: BasicTest.t.sol  Escrow.t.sol  EscrowFactory.t.sol
contracts/near-htlc/: Cargo.toml  README.md  RESEARCH_SUMMARY.md  SECURITY_TEST_SUMMARY.md  jest.config.js  package.json  tsconfig.json
contracts/near-htlc/docs/: NEAR_HTLC_Implementation_Guide.md  SECURITY_IMPROVEMENTS.md  SECURITY_TESTS.md
contracts/near-htlc/examples/: cross_chain_swap.js  fusion-orchestrator.ts
contracts/near-htlc/scripts/: deploy_testnet.sh  run_all_tests.sh  run_security_tests.sh
contracts/near-htlc/src/: fusion_htlc.rs  lib.rs  v4_htlc.rs
contracts/near-htlc/test-token/: Cargo.toml
contracts/near-htlc/test-token/src/: lib.rs
contracts/near-htlc/tests/: README.md  integration_tests.rs  orchestrator.test.ts  security_tests.rs  test_token.rs
demo/: DEMO_GUIDE.md  README.md  cross-chain-swap-demo.sh  demo-script.md  ethereum-demo.sh  fusion-plus-hackathon-demo.sh  hackathon-final-demo.sh  live-demo-script.sh  quick-demo.sh  testnet-onchain-demo.sh
docs/: 1inch-fusion-plus-analysis.md  1inch-fusion-plus-crosschain-deep-dive.md  1inch-fusion-understanding.md  1inch-swap-modes-overview.md  COMMANDS.md  CROSS_CHAIN_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_GUIDE.md  ETHGlobal-Unite-Knowledge-Base.md  Fusion-Plus-Technical-Guide.md  Fusion-Plus技術ガイド.md  IMPLEMENTATION_ROADMAP.md  NEAR-LIMIT-ORDER-INTEGRATION.md  PROPER_ARCHITECTURE.md  QUICK_START.md  REAL_CROSS_CHAIN_IMPLEMENTATION.md  architecture.md  crosschain-swap-architecture-explained.md  dutch-auction-explained.md  how-to-build-a-bridge.md  htlc-flow-diagram.md  implementation-strategy.md  limit-order-cli-guide.md  near-technical-investigation.md  qa-test-plan.md  優勝アイデア.md  実装アクションプラン.md
docs/issues/: PR10-security-improvements.md  PR11-improvement-suggestions.md
fusion-cli/: Cargo.toml
fusion-cli/examples/: claim_example.rs
fusion-cli/src/: ethereum_tx.rs  htlc_monitor.rs  lib.rs  main.rs  near_order_handler.rs  oneinch_api.rs.bak  order_handler.rs  order_management.rs  relay_order_handler.rs  storage.rs  swap_handler.rs  swap_handler_test.rs
fusion-cli/tests/: README.md  cli_tests.rs  comprehensive_cli_tests.rs  data_integrity_tests.rs  error_handling_tests.rs  order_cli_tests.rs  order_management_tests.rs  relay_order_tests.rs  swap_tests.rs  test_runner.sh
fusion-core/: Cargo.toml  README_EVENT_MONITORING.md  build.rs  clippy.toml
fusion-core/examples/: cross_chain_relayer_demo.rs  event_monitor_demo.rs  htlc_demo.rs  near_limit_order_integration.rs  secret_demo.rs
fusion-core/src/: automated_executor.rs  claim_executor.rs  config.rs  cross_chain_executor.rs  cross_chain_secret_manager.rs  eip712.rs  enhanced_price_oracle.rs  event_order_linker.rs  execution_path_optimizer.rs  htlc.rs  lib.rs  limit_order_htlc.rs  near_limit_order.rs  one_inch_integration.rs  order.rs  order_matching_engine.rs  price_oracle.rs  secret_manager.rs  secret_manager_integration_test.rs  storage.rs
fusion-core/src/chains/: ethereum.rs  mod.rs  near.rs  near_events.rs  near_monitor.rs
fusion-core/src/chains/ethereum/: event_monitor.rs  event_storage.rs  events.rs  limit_order_abi.rs  mod.rs  order_extractor.rs
fusion-core/src/chains/ethereum/abi/: escrow.rs  factory.rs  mod.rs
fusion-core/src/chains/near/: event_monitor.rs  htlc_connector.rs
fusion-core/tests/: concurrent_tests.rs  cross_chain_integration_test.rs  eip712_tests.rs  ethereum_tests.rs  event_monitor_real_tests.rs  event_monitoring_tests.rs  event_storage_tests.rs  evm_order_extraction_tests.rs  htlc_tests.rs  near_connector_tests.rs  near_htlc_integration_test.rs  near_htlc_real_tests.rs  near_integration_tests.rs  order_tests.rs  relayer_integration_tests.rs
references/: README.md
(+4 files in other folders)
