[workspace]
members = [
    "fusion-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fusion Plus Team"]
license = "MIT"
repository = "https://github.com/UniteDefi/fusion-plus"
homepage = "https://github.com/UniteDefi/fusion-plus"
readme = "README.md"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptographic dependencies
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
secp256k1 = "0.27"
ed25519-dalek = "2.0"

# Testing dependencies
mockall = "0.12"
proptest = "1.4"
test-case = "3.3"