[package]
name = "fusion-cli"
version = "0.1.0"
edition = "2021"
authors = ["Fusion Plus Team"]
license = "MIT"
repository = "https://github.com/susumutomita/UniteDefi"
homepage = "https://github.com/susumutomita/UniteDefi"
readme = "README.md"

[dependencies]
fusion-core = { path = "../fusion-core" }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
