[package]
name = "fusion-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
hex.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
rand.workspace = true
subtle.workspace = true
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
ethers = { version = "2.0", features = ["abigen"] }

[dev-dependencies]
tokio.workspace = true
mockall.workspace = true
proptest.workspace = true
test-case.workspace = true