[package]
name = "fusion-core"
version = "0.1.0"
edition = "2021"
authors = ["Fusion Plus Team"]
license = "MIT"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
subtle = "2.5"
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { version = "1.35", features = ["full"] }
borsh = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
near-jsonrpc-client = "0.12"
near-jsonrpc-primitives = "0.23"
near-primitives = "0.23"
near-crypto = "0.23"
tracing = "0.1"

[build-dependencies]
ethers = { version = "2.0", features = ["abigen"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
mockall = "0.12"
proptest = "1.4"
test-case = "3.3"
