[package]
name = "near-htlc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.0.0", features = ["legacy"] }
borsh = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4"



[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
near-workspaces = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"

# [workspace] # Removed - this is now part of the parent workspace
